2004-09-13  Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* swank.lisp (intern-catch-tag): New function.
	(read-user-input-from-emacs, take-input): Use it.

2004-09-13  John Paul Wallington  <jpw@gnu.org>

	* swank.lisp (define-special): Make the doc-type `variable'
	rather than `symbol'.  Don't quote `doc'.  Doc fix.

2004-09-09  Martin Simmons <martin@xanalys.com>

	* swank-lispworks.lisp: Set up the swank-mop package.  Implement
 	swank-mop:slot-definition-documentation and function-name.

2004-09-13  Marco Baringer  <mb@bese.it>

	* swank.lisp (inspected-parts): Added inspectors for pathnames,
	logical pathnames, standard-objects and numbers (float, ratio,
	integer and complex).

	* swank-backend.lisp: Define import-to-swank-mop.

	* swank-openmcl.lisp, swank-sbcl.lisp, swank-allegro.lisp: Don't
	define the import-to-swank-mop function (now defined in
	swank-backend.lisp).

	* swank-cmucl.lisp (swank-mop, function-name): Implement backend
	for inspector.
	(arglist): Add support for extracting arglists from function
	objects.
	(create-socket): Don't specify the host on PPC.

2004-09-13  Alan Ruttenberg <alanr-l@mumble.net>

        * slime.el slime-goto-location-position: New location specifiers:
	(:method name specializers . qualifiers) all are strings. Looks
	for defxxx name then the qualifiers as words, in order then the
	specializers as words, in order (except for "T", which is
	optional). Pass the symbols names for specializers and qualifiers 
	(no packages). Used by openmcl but might be useful for others
	(:text-anchored <position fixnum> <string> <delta fixnum>) 
	Got to position, then search for string, then move delta. To
	support upcoming source recording for openmcl debugging.

	* swank-openmcl multiple changes: - fix support for *sldb-top*
	 (formerly *swank-debugger-stack-frame*) Was not thread safe. Now
	 (application-error), and (interrupt-thread) records the error
	 pointer in a table associated with thread and map-backtrace picks